--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@supabase/supabase-js": "^2.49.4",
     "expo": "^53.0.7",
     "expo-sqlite": "~15.2.9",
     "expo-status-bar": "~2.2.3",
@@ -20,7 +21,8 @@
     "react-native-paper": "^5.14.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-screens": "~4.10.0",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
